--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,13 @@
     <link rel="stylesheet" href="style.css">
     <script type="module" src="graficos/informacoesGlobais.js"></script>
 </head>
+
 <body>
     <header>
         <h1>Relatório das redes sociais</h1>
         <nav>
-                <a href="index.html">Mundo</a>
-                <a href="#">Minha escola</a>
+            <a href="index.html">Mundo</a>
+            <a href="#">Colégio Cívico Militar Viniciús de Moraes</a>
         </nav>
     </header>
     <main class="graficos-section">
@@ -20,7 +22,16 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Helo</p>
+        <p class="graficos-container_texto">
+            Você sabia que o mundo tem 7888000000 de pessoas e que aproximadamente 5040000000 estão conectadas em alguma
+            rede social e passam em média 2.38 horas conectadas."
+        </p>
+        <p>Desenvolvido por Heloisa</p>
+        <script type="module" src="graficos/informacoesGlobais.js"></script>
+        <script type="module" src="graficos/quantidadeUsuarios.js"></script>
     </footer>
+
+    <script type="module" src="graficos/informacoesGlobais.js"></script>
 </body>
+
 </html>
